src/css/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/**
 * Default element styles
 */
a {
  @apply font-medium text-blue-500 dark:text-blue-600 hover:underline;
}

p {
  @apply max-w-[70ch] leading-relaxed;
}
* + p {
  @apply mt-4
}

hr {
  @apply my-gutterAndAHalf border-solid border-t border-gray-300;
}

h1,
h2,
h3 {
  text-wrap: balance;
}

p + h3 {
  @apply border-t border-gray-300 pt-gutterHalf;
}

ol {
  @apply list-decimal pl-gutter space-y-2;
}

ul {
  @apply list-disc pl-gutter space-y-2;
}

p + ol, p + ul {
  @apply pt-4
}

/**
 * Layout components
 */

 .action-required {
  @apply my-gutter px-gutter border-l-4 border-gray-300;
 }

/**
 * Skip to main content accessibility component
 */
.skiplink:focus {
  @apply flex outline-none bg-yellow-300 border-b-2 border-blue-500 no-underline;
  z-index: 1;
}

.skiplink:not(:focus) {
  @apply absolute;
  left: -9999em;
}

.skiplink:focus,
.skiplink:visited {
  color: #0b0c0c;
}

#skiplink-container .skiplink {
  display: -moz-inline-stack;
  display: inline-block;
}

